# 2paq

./: .gitignore  README.md  install.sh  pyproject.toml
clustering/: analyser.ipynb  clustering.py  clustering_utils.py
data/all_model_preds/: paq-fid.misses.jsonl
data/all_model_preds/PAQ/: test.repaq_reranker.nq.txt  test.repaq_reranker.tqa.txt  test.repaq_retriever.nq.txt  test.repaq_retriever.tqa.txt
data/all_model_preds/bart/: test.bart.nq.txt  test.bart.tqa.txt  test.bart.wq.txt
data/all_model_preds/dpr/: test.dpr.tqa.txt  test.dpr.wq.txt
data/all_model_preds/fid/: test.fid.nq.txt  test.fid.tqa.txt  test.fid_base.nq.txt  test.fid_patrick.nq.txt
data/all_model_preds/rag/: test.rag.nq.txt  test.rag.tqa.txt  test.rag.wq.txt
data/all_model_preds/retrieval_dpr/: test.dpr-multiset.nq.txt  test.dpr-multiset.tqa.txt  test.dpr-multiset.wq.txt  test.dpr-nq.nq.txt  test.dpr-nq.tqa.txt  test.dpr-nq.wq.txt
data/all_model_preds/retrieval_tfidf/: test.tfidf.nq.txt  test.tfidf.wq.txt  (+1 more)
data/annotated_datasets/: nq-open.dev.jsonl  triviaqa.dev.jsonl
data/nq-open/: nq_test_full.json
dataset/: dataset_augmenter.py  dataset_normalizer.py
evaluation/: baseline_evaluation.py  experiment_evaluation.py  model_comparison_evaluation.py
generation/: dbpedia_qa_generator.py  imdb_qa_generator.py  movie_extractor.py  wikidata_filtered_qa_generator.py  wikidata_qa_generator.py
paq/: retrieve_efficient.py  run_experiment.py
stats/: dataset_stats.py  qa_pair_stats.py
tests/: test_evaluation_utils.py
utils/: cache.py  data.py  evaluation_utils.py  utils.py  wikidata.py
(+2 files in other folders)
